RDF Data Cube constraints

--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -1,15 +1,6 @@
 % This file was created with JabRef 2.10.
 % Encoding: UTF8
 
-@book{Arora:2009:CCM:1540612,
- author = {Arora, Sanjeev and Barak, Boaz},
- title = {Computational Complexity: A Modern Approach},
- year = {2009},
- isbn = {0521424267, 9780521424264},
- edition = {1st},
- publisher = {Cambridge University Press},
- address = {New York, NY, USA},
-} 
 
 @InProceedings{Lohmann2009,
   Title                    = {A Web Platform for Social Requirements Engineering},
@@ -41,6 +32,18 @@
 
   Owner                    = {Thomas},
   Timestamp                = {2014.05.01}
+}
+
+@Book{Arora:2009:CCM:1540612,
+  Title                    = {Computational Complexity: A Modern Approach},
+  Author                   = {Arora, Sanjeev and Barak, Boaz},
+  Publisher                = {Cambridge University Press},
+  Year                     = {2009},
+
+  Address                  = {New York, NY, USA},
+  Edition                  = {1st},
+
+  ISBN                     = {0521424267, 9780521424264}
 }
 
 @Article{Artale2009,
@@ -332,6 +335,18 @@
 
   Owner                    = {Thomas Bosch},
   Timestamp                = {2014.11.09}
+}
+
+@TechReport{CyganiakReynolds2014,
+  Title                    = {The RDF Data Cube Vocabulary},
+  Author                   = {Cyganiak,Richard and Reynolds,Dave},
+  Institution              = {W3C},
+  Year                     = {2014},
+  Month                    = {January},
+  Type                     = {{W3C} Recommendation},
+
+  Groups                   = {public},
+  Url                      = {http://www.w3.org/TR/vocab-data-cube/}
 }
 
 @TechReport{DroegeBoschCharlesClayphanMatienzoRuehlePohlAlonenSvenssonCoyle2014,
