--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -666,7 +666,7 @@ class & Human & - & - & Hologram & $\ne$ \\
 
 \ms{Existential Quantification on Properties} conforms to the requirement \\
 \ms{R-86-EXISTENTIAL-QUANTIFICATION-ON-PROPERTIES}.
-In DL terminology the \ms{existential quantification} is alco called \ms{existential restriction}.
+In DL terminology the \ms{existential quantification} is also called \ms{existential restriction}.
 An existential class expression consists of a property expression and a class expression or a data range, and it contains all those individuals that are connected by the property expression to an individual that is an instance of the class expression or to literals that are in the data range.  
 
 \subsection{Simple Example}
