--- a/paper/paper6/paper6.tex
+++ b/paper/paper6/paper6.tex
@@ -50,7 +50,7 @@
 %% This TITLE has a note reference (titleNote) whose 
 %% contants is specified about 10 lines later.
 
-\title{RDF Validation of \\ Metadata on Highly-Complex Person-Level Data Sets}
+\title{Modeling and Validation of Metadata on \\ Highly-Complex Person-Level Data Sets in RDF}
 
 %% Here are the three AUTHORS.  Note the separating commas
 %% with no and.
@@ -100,12 +100,14 @@
 \section{Motivation}
 
 \begin{itemize}
+  \item why do we need these newly defined vocabularies?
 	\item Why do we need RDF Validation?
 	\item Why do we need to validate metadata on person-level data sets? 
 \end{itemize}
 
 \textbf{Contributions.}
 \begin{itemize}
+  \item We show how to model highly complex person-level data sets in RDF using different vocabularies 
   \item We define constraints on Disco, Data Cube, PHDD, DCAT, XKOS data sets
 	\item WE provide an implementation to validate Disco, Data Cube, PHDD, DCAT, XKOS data sets 
 \end{itemize}
@@ -134,6 +136,10 @@
 
 \section{Validation of Metadata on Person-Level Data Sets}
 
+Constraint types marked with an asterisk can be used as an OWL 2 axiom.
+Thus, reasoners may be used to infer implicit triples resolving constraint violations causing when these constraints are validated.
+\textcolor{blue}{example}
+
 \subsection{Data Model Consistency}
 
 Is the data consistent with the intended semantics of the data model?
@@ -143,8 +149,8 @@ Ensures the integrity of the data according to the data model.
 
 \subsection{Minimum Qualified Cardinality Restrictions}
 
-{\em DISCO-C-XX}. 
-A {\em disco:Questionnaire} has at least 1 {\em disco:question} relationship to {\em disco:Question}.
+\textbf{{\em DISCO-C-XX}}.
+A {\em disco:Questionnaire} has at least 1 {\em disco:question} relationship to {\em disco:Question}\footnote{When mapped to DL, we do not state namespace prefixes for simplicity reasons}.
 
 \begin{DL}
 Questionnaire $\sqsubseteq$ $\geq$1 question.Question
@@ -152,7 +158,7 @@ Questionnaire $\sqsubseteq$ $\geq$1 question.Question
 
 \subsection{Exact Qualified Cardinality Restrictions}
 
-{\em DISCO-C-XX}. 
+\textbf{{\em DISCO-C-XX}}. 
 A {\em disco:Question} has exactly 1 {\em disco:universe} relationship to {\em disco:Universe}.
 
 \begin{DL}
@@ -160,9 +166,11 @@ Question $\sqsubseteq$ \\
 $\geq$1 universe.Universe $\sqcap$ $\leq$1 universe.Universe \\
 \end{DL}
 
-\subsection{Universal Quantifications}
+\subsection{Universal Quantifications*}
 
-{\em DISCO-C-XX}. 
+\footnote{R-91-UNIVERSAL-QUANTIFICATION-ON-PROPERTIES}
+
+\textbf{{\em DISCO-C-XX}}.
 Only {\em disco:LogicalDataSet}s can have {\em disco:aggregation} relationships to {\em qb:DataSet}s.
 
 \begin{DL}
@@ -171,11 +179,96 @@ LogicalDataSet $\sqsubseteq$ $\forall$ aggregation.DataSet \\
 
 \subsection{Existential Quantifications}
 
-{\em DISCO-C-XX}. 
+An existential class expression ({\em existential restriction} in DL terminology) contains all those individuals that are connected by the property P to an individual x that is an instance of the class C or to literals that are in the data range DR\footnote{R-86-EXISTENTIAL-QUANTIFICATION-ON-PROPERTIES}.
+
+\textbf{{\em DISCO-C-XX}}. 
 There must be at least 1 {\em disco:universe} relationship from {\em disco:Studies} or {\em disco:StudyGroups} to {\em disco:Universe}.
 
 \begin{DL}
 Study $\sqcup$ StudyGroup $\sqsubseteq$ $\exists$ universe.Universe \\
+\end{DL}
+
+\subsection{Disjunction}
+
+\textbf{{\em DISCO-C-XX}}. 
+Only {\em disco:Variable}s or {\em disco:Question}s or {\em disco:RepresentedVariable}s can have {\em disco:concept} relationships to {\em skos:Concept}s.
+
+\begin{DL}
+Variable $\sqcup$ Question $\sqcup$ RepresentedVariable \\
+$\sqsubseteq$ $\forall$ concept.Concept \\
+\end{DL}
+		
+\subsection{Property Domains*}
+
+{\em Property Domain} constraints are defined for each Disco object and data property.
+
+\textbf{{\em DISCO-C-XX}}. 
+Only {\em disco:Question}s can have {\em disco:responseDomain} relationships.
+
+\begin{DL}
+$\exists$ responseDomain.$\top$ $\sqsubseteq$ Question 
+\end{DL}
+
+\subsection{Property Ranges*}
+
+\textbf{{\em DISCO-C-XX}}. 
+{\em disco:caseQuantity} relationships can only point to literals of the datatype {\em xsd:nonNegativeInteger}.
+
+\begin{DL}
+$\top$ $\sqsubseteq$ $\forall$ caseQuantity.nonNegativeInteger \\
+\end{DL}
+
+\subsection{Class-Specific Property Ranges}		
+
+\textbf{{\em DISCO-C-XX}}. 
+Only {\em disco:Question}s can have {\em disco:questionText} relationships to literals of the datatype {\em rdf:langString}.
+
+\begin{DL}
+$\neg$Question $\sqsubseteq$ $\neg\exists$ questionText.langString
+\end{DL}
+
+\subsection{Subsumption*}
+
+\textbf{{\em DISCO-C-XX}}. 
+All {\em disco:Universe}s must also be {\em skos:Concept}s.
+
+\begin{DL}
+Universe $\sqsubseteq$ Concept
+\end{DL}
+
+\subsection{Class Equivalence*}
+
+\textbf{{\em DISCO-C-XX}}. 
+All {\em sio:SIO\_000367}s must also be {\em disco:Variable}s.
+
+\begin{DL}
+Variable $\equiv$ SIO\_000367
+\end{DL}
+
+The Semanticscience Integrated Ontology (SIO)\footnote{https://code.google.com/p/semanticscience/wiki/SIO} provides a simple, integrated ontology of types and relations for rich description of objects, processes and their attributes.
+{\em sio:SIO\_000367} is a variable defined as a value that may change within the scope of a given problem or set of operations.
+Thus, {\em sio:SIO\_000367} is equivalent to {\em disco:Variable}.
+
+\subsection{Sub Properties*}
+
+{\em Sub Properties} state that the property P1 is a sub property of the property P2 - that is, if an individual x is connected by P1 to an individual or a literal y, then x is also connected by P2 to y. 
+
+\textbf{{\em DISCO-C-XX}}. 
+If an individual x is connected by {\em disco:fundedBy} to an individual y, then x is also connected by {\em dcterms:contributor} to y. 
+
+\begin{DL}
+fundedBy $\sqsubseteq$ contributor 
+\end{DL}
+
+\subsection{Disjoint Classes}
+
+{\em Disjoint Classes} state that all of the classes are pairwise disjoint; 
+that is, no individual can be at the same time an instance of these disjoint classes\footnote{R-7-DISJOINT-CLASSES}.
+\textbf{{\em DISCO-DISJOINT-CLASSES-01}}.All Disco classes are defined to be pairwise disjoint.
+The following DL statements holds for each pair of Disco classes:
+
+\begin{DL}
+Study $\sqcap$ Variable $\sqsubseteq$ $\perp$\\
 \end{DL}
 
 \subsection{SKOS-Related Constraints}
@@ -275,6 +368,7 @@ There are 22 RDF Data Cube integrity constraints\footnote{http://www.w3.org/TR/v
 
 \begin{itemize}
 	\item validate constraints on complex example data set
+	\item count Disco, QB, PHDD, XKOS, DCAT constraints by constraint groups 
 \end{itemize}
 
 \section{Related Work}
