--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -920,7 +920,7 @@ A minimum cardinality restrictions contains all those individuals that are conne
 that are instances of a particular class or data range. If the class is missing, it is taken to be owl:Thing. 
 If the data range is missing, it is taken to be rdfs:Literal.
 For qualified cardinality restrictions, classes respective data ranges are stated.
-$\leq n R. C$ is a minimum qualified cardinality restriction where $n \in \mathbb{N}$.
+$\geq n R. C$ is a minimum qualified cardinality restriction where $n \in \mathbb{N}$.
 
 \subsection{Simple Example}
 
