--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -2420,7 +2420,7 @@ Examples are:
 \subsection{Simple Example}
 
 \begin{ex}
-# DSCL (DQTP):
+# DQTP:
 SELECT ?s WHERE { 
     ?s %%P1%% ?v1 .
     ?s %%P2%% ?v2 .
