--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -2515,6 +2515,7 @@ P1 is a data property of an instance of class T1 and its literal value must be b
 
 \ms{Literal Ranges} corresponds to the requirement
 \ms{R-45-RANGES-OF-RDF-LITERAL-} \ms{VALUES}.
+P1 is a data property (of an instance of class C1) and its literal value must be between the range of [$V_{min}$,$V_{max}$].
 
 \subsection{Example}
 
@@ -2982,6 +2983,7 @@ property & $\top$ & parentOf & ancestorOf & $\top$ & $\sqsubseteq$ \\
 
 \ms{Recommended Properties} corresponds to the requirement \\
 \ms{R-72-RECOMMENDED-PROPERTIES}.
+Which properties are not required but recommended within a particular context.
 
 \subsection{Simple Example}
 
