--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -178,14 +178,20 @@
 
 %
 %
-\title{RDF Validation}
-\subtitle{Classification of Constraints and Constraint Languages According to Reasoning, Expressivity, and Complexity}
-%
+\title{On Constraint Languages for RDF Validation and Reasoning}
+\subtitle{}
+%On Constraint Languages for RDF Validation and Reasoning
+%RDF Validation - Classification of Constraints and Constraint Languages According to Reasoning, Expressivity, and Complexity
+%RDF Validation: An Analysis of Constraint Languages
+%Analysing Constraint Languages for RDF Validation
+%Classifying Constraint Languages for RDF Validation
+%RDF Validation and Reasoning.
+%Classifying Constraint Languages for RDF validation Concerning Reasoning
 \titlerunning{XXXXX}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Thomas Bosch\inst{1} \and Erman Acar\inst{2} \and Andreas Nolle\inst{3} \and Christian Meilicke\inst{2} \and Kai Eckert\inst{2}}
+\author{Thomas Bosch\inst{1} \and Erman Acar\inst{2} \and Andreas Nolle\inst{3} \and Kai Eckert\inst{2}}
 %
 \authorrunning{XXXXX} % abbreviated author list (for running head)
 %
