--- a/paper/paper6/paper6.tex
+++ b/paper/paper6/paper6.tex
@@ -140,6 +140,8 @@
 
 \section{Validation of Metadata on Person-Level Data Sets}
 
+\textcolor{blue}{multiple validation levels}
+
 Where appropriate constraint types are related to complementary requirements of the RDF validation requirements database.
 
 We state one Disco constraint for each constraint type.
@@ -161,8 +163,7 @@ A minimum cardinality restrictions contains all those individuals that are conne
 that are instances of a particular class or data range. If the class is missing, it is taken to be owl:Thing. 
 If the data range is missing, it is taken to be rdfs:Literal.
 $\geq n R. C$ is a minimum qualified cardinality restriction where $n \in \mathbb{N}$\footnote{{\em R-75-MINIMUM-QUALIFIED-CARDINALITY-ON-PROPERTIES} and {\em R-211-CARDINALITY-CONSTRAINTS}}.
-
-\textbf{{\em DISCO-C-XX}}.
+\textbf{{\em DISCO-C-XX:}}
 A {\em disco:Questionnaire} has at least 1 {\em disco:question} relationship to {\em disco:Question}\footnote{When mapped to DL, we do not state namespace prefixes for simplicity reasons}.
 
 \begin{DL}
@@ -175,8 +176,7 @@ An exact cardinality restriction contains all those individuals that are connect
 If the class is missing, it is taken to be owl:Thing. 
 If the data range is not present, it is taken to be rdfs:Literal.
 $\geq n R. C \sqcap \leq n R. C $ is an exact qualified cardinality restriction where $n \in \mathbb{N}$\footnote{{\em R-74-EXACT-QUALIFIED-CARDINALITY-ON-PROPERTIES} and {\em R-211-CARDINALITY-CONSTRAINTS}.}.
-
-\textbf{{\em DISCO-C-XX}}. 
+\textbf{{\em DISCO-C-XX:}}
 A {\em disco:Question} has exactly 1 {\em disco:universe} relationship to {\em disco:Universe}.
 
 \begin{DL}
@@ -187,8 +187,7 @@ $\geq$1 universe.Universe $\sqcap$ $\leq$1 universe.Universe \\
 \subsection{Universal Quantifications*}
 
 A universal class expression ({\em value restriction} in DL) contains all those individuals that are connected by an object property only to individuals that are instances of a particular class\footnote{{\em R-91-UNIVERSAL-QUANTIFICATION-ON-PROPERTIES}}.
-
-\textbf{{\em DISCO-C-XX}}.
+\textbf{{\em DISCO-C-XX:}}
 Only {\em disco:LogicalDataSet}s can have {\em disco:aggregation} relationships to {\em qb:DataSet}s.
 
 \begin{DL}
@@ -198,8 +197,7 @@ LogicalDataSet $\sqsubseteq$ $\forall$ aggregation.DataSet \\
 \subsection{Existential Quantifications}
 
 An existential class expression ({\em existential restriction} in DL terminology) contains all those individuals that are connected by the property P to an individual x that is an instance of the class C or to literals that are in the data range DR\footnote{{\em R-86-EXISTENTIAL-QUANTIFICATION-ON-PROPERTIES}}.
-
-\textbf{{\em DISCO-C-XX}}. 
+\textbf{{\em DISCO-C-XX:}} 
 There must be at least 1 {\em disco:universe} relationship from {\em disco:Studies} or {\em disco:StudyGroups} to {\em disco:Universe}.
 
 \begin{DL}
@@ -211,8 +209,7 @@ Study $\sqcup$ StudyGroup $\sqsubseteq$ $\exists$ universe.Universe \\
 A union class expression contains all individuals that are instances of at least one class $C_{i}$ for 1 $\leq$ i $\leq$ n. 
 A union data range contains all tuples of literals that are contained in the at least one data range $DR_{i}$ for 1 $\leq$ i $\leq$ n.
 Synonyms of {\em disjunction} are {\em union} and {\em inclusive or}\footnote{{\em R-17-DISJUNCTION-OF-CLASS-EXPRESSIONS} and {\em R-18-DISJUNCTION-OF-DATA-RANGES}}.
-
-\textbf{{\em DISCO-C-XX}}. 
+\textbf{{\em DISCO-C-XX:}} 
 Only {\em disco:Variable}s or {\em disco:Question}s or {\em disco:RepresentedVariable}s can have {\em disco:concept} relationships to {\em skos:Concept}s.
 
 \begin{DL}
@@ -227,8 +224,7 @@ The purpose is to declare that a given property is associated with a class.
 In OO terms this is the declaration of a member, field, attribute or association. 
 $\exists R. \top \sqsubseteq C$ is the object property restriction where $R$ is the object property (role) whose domain is restricted to concept $C$\footnote{{\em R-25-OBJECT-PROPERTY-DOMAIN} and {\em R-26-DATA-PROPERTY-DOMAIN}}.
 {\em Property Domain} constraints are defined for each Disco object and data property.
-
-\textbf{{\em DISCO-C-XX}}. 
+\textbf{{\em DISCO-C-XX:}} 
 Only {\em disco:Question}s can have {\em disco:responseDomain} relationships.
 
 \begin{DL}
@@ -239,8 +235,7 @@ $\exists$ responseDomain.$\top$ $\sqsubseteq$ Question
 
 {\em Property Range} ({\em range restrictions on roles} in DL) restricts the range of object and data properties.
 $\top \sqsubseteq \forall R . C$ is the range restriction to the object property $R$ (restricted by the concept $C$)\footnote{{\em R-28-OBJECT-PROPERTY-RANGE} and {\em R-35-DATA-PROPERTY-RANGE}}. 
-
-\textbf{{\em DISCO-C-XX}}. 
+\textbf{{\em DISCO-C-XX:}} 
 {\em disco:caseQuantity} relationships can only point to literals of the datatype {\em xsd:nonNegativeInteger}.
 
 \begin{DL}
@@ -251,8 +246,7 @@ $\top$ $\sqsubseteq$ $\forall$ caseQuantity.nonNegativeInteger \\
 
 {\em Class-Specific Property Range} restricts the range of object and data properties for individuals within a specific context (e.g. class, shape, application profile).
 The values of each member property of a class may be limited by their value type, such as xsd:string or foaf:Person\footnote{{\em R-29-CLASS-SPECIFIC-RANGE-OF-RDF-OBJECTS} and {\em R-36-CLASS-SPECIFIC-RANGE-OF-RDF-LITERALS}}. 
-
-\textbf{{\em DISCO-C-XX}}. 
+\textbf{{\em DISCO-C-XX:}} 
 Only {\em disco:Question}s can have {\em disco:questionText} relationships to literals of the datatype {\em rdf:langString}.
 
 \begin{DL}
@@ -262,8 +256,7 @@ $\neg$Question $\sqsubseteq$ $\neg\exists$ questionText.langString
 \subsection{Subsumption*}
 
 A subclass axiom ({\em concept inclusion} in DL) states that the class C1 is a subclass of the class C2 - C1 is more specific than C2\footnote{{\em R-100-SUBSUMPTION}}.
-
-\textbf{{\em DISCO-C-XX}}. 
+\textbf{{\em DISCO-C-XX:}} 
 All {\em disco:Universe}s must also be {\em skos:Concept}s.
 
 \begin{DL}
@@ -276,8 +269,7 @@ Universe $\sqsubseteq$ Concept
 While synonyms are an obvious example of equivalent concepts, in practice one more
 often uses concept equivalence to give a name to complex expressions \cite{Kroetzsch2012}.
 Concept equivalence is indeed subsumption from left and right ($A \sqsubseteq B$ and $B \sqsubseteq A$ implies $A \equiv B$)\footnote{{\em R-3-EQUIVALENT-CLASSES}}.
-
-\textbf{{\em DISCO-C-XX}}. 
+\textbf{{\em DISCO-C-XX:}}
 All {\em sio:SIO\_000367}s must also be {\em disco:Variable}s.
 
 \begin{DL}
@@ -291,8 +283,7 @@ Thus, {\em sio:SIO\_000367} is equivalent to {\em disco:Variable}.
 \subsection{Sub Properties*}
 
 {\em Sub Properties} state that the property P1 is a sub property of the property P2 - that is, if an individual x is connected by P1 to an individual or a literal y, then x is also connected by P2 to y. 
-
-\textbf{{\em DISCO-C-XX}}. 
+\textbf{{\em DISCO-C-XX:}}
 If an individual x is connected by {\em disco:fundedBy} to an individual y, then x is also connected by {\em dcterms:contributor} to y. 
 
 \begin{DL}
@@ -303,7 +294,8 @@ fundedBy $\sqsubseteq$ contributor
 
 {\em Disjoint Classes} state that all of the classes are pairwise disjoint; 
 that is, no individual can be at the same time an instance of these disjoint classes\footnote{{\em R-7-DISJOINT-CLASSES}}.
-\textbf{{\em DISCO-C-01}}. All Disco classes are defined to be pairwise disjoint.
+\textbf{{\em DISCO-C-XX:}} 
+All Disco classes are defined to be pairwise disjoint.
 The following DL statements holds for each pair of Disco classes:
 
 \begin{DL}
@@ -314,8 +306,7 @@ Study $\sqcap$ Variable $\sqsubseteq$ $\perp$\\
 
 A property is asymmetric if it is disjoint from its own inverse \cite{Kroetzsch2012}.
 An object property asymmetry axiom states that the object property OP is asymmetric - that is, if an individual x is connected by OP to an individual y, then y cannot be connected by OP to x\footnote{{\em R-62-ASYMMETRIC-OBJECT-PROPERTIES}}. 
-
-\textbf{{\em DISCO-C-01}}. 
+\textbf{{\em DISCO-C-XX:}} 
 A {\em disco:Variable} may be based on a {\em disco:RepresentedVariable}.
 A {\em disco:RepresentedVariable}, however, cannot be based on a {\em disco:Variable}.
 This is a kind of mistake may occur as a semantically equivalent object property for the other direction may also be possible ({\em disco:basisOf}).
@@ -328,15 +319,10 @@ $basedOn \sqcap basedOn^{-} \sqsubseteq \bot$
 
 A property is irreflexive if it is never locally reflexive \cite{Kroetzsch2012}.
 An object property irreflexivity axiom states that the object property OP is irreflexive - that is, no individual is connected by OP to itself. 
+\textbf{{\em DISCO-C-XX:}}
+Within the Disco context, {\em skos:Concept}s cannot be related via the object property {\em skos:boader} to themselves (DL: Concept $\sqsubseteq$ $\neg$$\exists$ broader.Self).
 
-\textbf{{\em DISCO-C-XX}}.
-Within the Disco context, {\em skos:Concept}s cannot be related via the object property {\em skos:boader} to themselves.
-
-\begin{DL}
-Concept $\sqsubseteq$ $\neg$$\exists$ broader.Self. 
-\end{DL}
-
-\textbf{{\em DISCO-C-XX}}.
+\textbf{{\em DISCO-C-XX:}}
 Within the Disco context, {\em skos:Concept}s cannot be related via the object property {\em skos:narrower} to themselves. 
 
 \begin{DL}
@@ -347,8 +333,7 @@ Concept $\sqsubseteq$ $\neg$$\exists$ narrower.Self.
 
 Exclusive or is a logical operation that outputs true whenever both inputs differ (one is true, the other is false).
 Only one of multiple property groups leads to valid data\footnote{{\em R-13-DISJOINT-GROUP-OF-PROPERTIES-CLASS-SPECIFIC}}.
-
-\textbf{{\em DISCO-C-XX}}.
+\textbf{{\em DISCO-C-XX:}}
 Within the context of Disco, skos:Concepts can have either skos:definition (when interpreted as DDI concepts) or skos:notation and skos:prefLabel properties (when interpreted as DDI codes and categories), but not both.
 
 \begin{DL}
@@ -359,7 +344,7 @@ B $\sqsubseteq$ $\geq$ 1 prefLabel.string $\sqcap$ $\leq$ 1 prefLabel.string \\
 C $\sqsubseteq$ $\geq$ 1 definition.string $\sqcap$ $\leq$ 1 definition.string \\
 \end{DL}
 
-\section{Allowed Values}
+\subsection{Allowed Values}
 
 It is a common requirement to narrow down the value space of a property by an exhaustive enumeration of the valid values (both literals or resource). 
 This is often rendered in drop down boxes or radio buttons in user interfaces. 
@@ -406,6 +391,70 @@ SELECT ?s WHERE {
 \textbf{{\em DISCO-C-XX}}.
 {\em disco:startDate}s must be before (‘\textless’) the {\em disco:endDate}s.
 To validate this constraint we bind the variables as follows (P1: {\em disco:startDate}, P2: {\em disco:endDate}, OP: \textless). 
+
+\subsection{Literal Ranges}
+
+P1 is a data property (of an instance of class C1) and its literal value must be between the range of [$V_{min}$,$V_{max}$].
+\textbf{{\em DISCO-C-XX:}}
+{\em disco:percentage} (domain: {\em disco:CategoryStatistics}) literals must be of the datatype {\em xsd:double} whose range should be restricted to be between 0 and 100 (not expressible in DL)\footnote{{\em R-45-RANGES-OF-RDF-LITERAL-VALUES}}.
+
+\subsection{Mathematical Operations}
+
+Examples for {\em Mathematical Operations} are the addition of two dates, the addition of days to a start date, and statistical computations (e.g. average, mean, sum).
+\textbf{{\em DISCO-C-XX:}}
+The sum of {\em disco:percentage} {\em xsd:double} values of all codes (represented as {\em skos:Concept}s) of a code list ({\em skos:ConceptScheme} or {\em skos:OrderedCollection}), serving as representation of a particular {\em disco:Variable}, must exactly be 100  
+(not expressible in DL)\footnote{{\em R-42-MATHEMATICAL-OPERATIONS} and {\em R-41-STATISTICAL-COMPUTATIONS}}.
+
+\subsection{Default Values}
+
+Default values for objects and literals are inferred automatically.
+It should be possible to declare the default value for a given property, e.g. so that input forms can be pre-populated and to insert a required property that is missing in a web service call\footnote{{\em R-31-DEFAULT-VALUES-OF-RDF-OBJECTS} and {\em R-38-DEFAULT-VALUES-OF-RDF-LITERALS}}.
+\textbf{{\em DISCO-C-XX:}}
+The value 'true' for the property {\em disco:isPublic} ({\em xsd:boolean}) indicates that the data set ({\em disco:LogicalDataSet}) can be accessed (usually downloaded) by anyone.
+Per default, access to data sets should be restricted ('false').
+
+\subsection{Language Tag Matching}
+
+For particular data properties, values must be stated for predefined languages (not expressible in DL)\footnote{{\em R-47-LANGUAGE-TAG-MATCHING}}.
+\textbf{{\em DISCO-C-XX:}}
+There must be an English variable name ({\em skos:notation}) for each {\em disco:Variable} within {\em disco:LogicalDataSet}s.
+
+\subsection{Language Tag Cardinality}
+
+For particular data properties, values of predefined languages must be stated for determined number of times (not expressible in DL)
+\footnote{{\em R-49-RDF-LITERALS-HAVING-AT-MOST-ONE-LANGUAGE-TAG} and {\em R-48-MISSING-LANGUAGE-TAGS}}.
+\textbf{{\em DISCO-C-XX:}}
+There must be at least one English {\em disco:questionText} for each {\em disco:Question} within {\em disco:LogicalDataSet}s.
+\textbf{{\em DISCO-C-XX:}}
+There should be at most one English literal value for variable names ({\em skos:notation}, domain: {\em disco:Variable}).
+
+\subsection{Conditional Properties}
+
+If specific properties exist, then specific other properties also have to be present\footnote{{\em R-71-CONDITIONAL-PROPERTIES}}.
+\textbf{{\em DISCO-C-XX:}}
+If a {\em skos:Concept represents a code (having a {\em skos:notation} property) and a category (having a {\em skos:prefLabel} property), 
+then the property {\em disco:isValid} has to be stated indicating if the code is valid ('true') or missing ('false').
+
+\subsection{Recommended Properties}
+
+Which properties are not required but recommended within a particular context\footnote{{\em R-72-RECOMMENDED-PROPERTIES}}.
+\textbf{{\em DISCO-C-XX:}}
+The property ({\em skos:notation} is not mandatory for {\em disco:Variable}s, but recommended to indicate variable names.
+
+\subsection{Value is Valid for Datatype}
+
+Make sure that a value is valid for its datatype.
+It has to be ensured, e.g., that a date is really a date, or that a xsd:nonNegativeInteger value is not negative. 
+\textbf{{\em DISCO-C-XX:}}
+Check if literal values of the property {\em disco:startDate} are really of the datatype {\em xsd:date}(not expressible in DL).
+
+\subsection{Equivalent Properties}
+
+\subsection{Functional Properties}
+
+\subsection{Data Property Facets}
+
+xsd:length of disco:purpose
 
 \subsection{Hierarchies}
 
