title updated as  proposal

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -178,7 +178,7 @@
 
 %
 %
-\title{On Constraint Languages for RDF Validation and Reasoning}
+\title{On Constraint Languages for RDF Validation with an account to Reasoning}
 \subtitle{}
 %On Constraint Languages for RDF Validation and Reasoning
 %RDF Validation - Classification of Constraints and Constraint Languages According to Reasoning, Expressivity, and Complexity
