--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -210,7 +210,7 @@ Albstadt-Sigmaringen University, Germany \\
 
 \begin{abstract}
 There is no standard way to formulate RDF constraints and to validate data according to these constraints,
-although there are five promising constraint languages covering all requirements on RDF validation.
+although there are five promising constraint languages covering the major requirements on RDF validation.
 The ontology language OWL 2 can be used as an expressive constraint language with a high level human-readable syntax.
 We explain why OWL 2 reasoning is beneficial for validation and how reasoning interacts with validation.
 %We take reasoning into account as a possible pre-validation step, 
